add other models and swagger documentation
