# app/models/item.rb
@@ -1,0 +1,4 @@
+class Item < ApplicationRecord
+  belongs_to :item_option
+  belongs_to :purchase
+end
